fix padding, margin and alignment of company logos in work section

--- a/src/styles.css
+++ b/src/styles.css
@@ -252,9 +252,27 @@ a {
 
 }
 
+.company-logo-container {
+    order: -1;
+    margin-bottom: 3.5em;
+}
+
 .company-logo * {
     fill: white;
 }
+
+.company-logo-group {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2.4em;
+}
+
+.company-logo-group-last {
+    margin-bottom: 0;
+}
+
+
 
 .work-text {
     color: #FBFCFE;
